# cmake_tests

./: .gitmodules  LICENSE.txt  Makefile  README.md
.claude/: settings.json
examples/: .gitignore  CMakeLists.txt  Makefile
examples/autolib/: CMakeLists.txt
examples/autolib/gtest/: autolib_test.cpp
examples/autolib/src/: autolib.cpp
examples/hello/: CMakeLists.txt  sources.cmake
examples/hello/src/: hello.cpp
examples/mylib/: CMakeLists.txt  sources.cmake
examples/mylib/gtest/: mylib_test.cpp
examples/mylib/src/: mylib.cpp
tests/: test_derammo_main_no_cmake_minimum_required.sh  test_executable_local_sources.sh  test_executable_private_sources.sh  test_generated_cmake_minimum_required.sh  test_include_guards.sh  test_library_local_sources.sh  test_maven_cd_quoted.sh  test_root_sed_g_flag.sh
tests/lib/: harness.sh
